# pycoach

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  docker-compose.server.yml  docker-compose.yml  requirements.txt
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_chapter_question_sets.py
services/api/app/: __init__.py  main.py  seed.py
services/api/app/agents/: __init__.py  critic.py  questioner.py
services/api/app/api/: graphs.py  messages.py  sessions.py  websockets.py
services/api/app/core/: config.py  database.py  dependencies.py  orchestrator.py
services/api/app/llm/: __init__.py  base.py  mock.py  openai_compatible.py
services/api/app/models/: __init__.py  entities.py
services/api/app/repositories/: __init__.py  graph_repository.py  question_repository.py  question_review_repository.py  session_repository.py
services/api/app/schemas/: __init__.py  base.py  chapter_plan.py  critic.py  graph.py  message.py  question.py  seed.py  session.py
services/api/app/services/: candidate_question_service.py  chapter_questioning_service.py  conversation_service.py  (+5 more)
services/api/tests/: test_chapter_questioning_service.py  test_critic_conversation.py  test_critic_review.py  test_critic_streaming_contract.py  test_graph_data.py  test_graph_service.py  test_health.py  test_mock_llm.py  test_openai_compatible.py  test_question_service.py  test_schemas.py  test_session_api.py  test_session_orchestrator.py  test_websocket.py
(+53 files in other folders)
