[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoach-api"
version = "0.1.0"
description = "PyCoach Lab API"
requires-python = ">=3.10,<3.11"
dependencies = [
  "alembic==1.16.5",
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "psycopg[binary]==3.2.9",
  "pydantic==2.12.5",
  "sqlalchemy==2.0.41",
  "uvicorn[standard]==0.34.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
